# wikitextparser

./: .gitignore  README.md  pyproject.toml
tests/: test_wikitextparser.py
tests/data/: extension.txt  i18n.txt  parrot.txt  simple.txt  xml.txt
wikitextparser/: __main__.py  parser.py  transformer.py  wiki.lark
wikitextparser/ast/: __init__.py  __main__.py  base.py  registry.py
wikitextparser/ast/nodes/: __init__.py  links.py  placeholder.py  plural.py
